# pauk

./: .coderabbit.yaml  README.md  change_size.c  change_size.h  css_parser.c  css_parser.h  event_handler.c  event_handler.h  font_manager.c  font_manager.h  forms_parser.c  forms_parser.h  gui.c  gui.h  headings_parser.c  headings_parser.h  iframe_parsing.c  iframe_parsing.h  img_parser.c  img_parser.h  js_executor_quickjs.c  js_executor_quickjs.h  layout_calculator.c  layout_calculator.h  layout_engine.c  layout_engine.h  link_parsing.c  link_parsing.h  lists_parser.c  lists_parser.h  lua_position.c  lua_position.h  main.c  main.h  media_parser.c  media_parser.h  menus_parser.c  menus_parser.h  meson.build  position_calculator.lua  (+9 more)
doc/: doxygroups.h
